agragado de footer y carpeta wcopy

--- a/index.html
+++ b/index.html
@@ -72,8 +72,19 @@
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2023 Nosotros - Agencia de Turismo</p>
+    <footer class="modern-footer">
+        <div class="footer-content">
+            <div class="contact-info">
+                <h3>Contacto</h3>
+                <p><i class="fas fa-phone"></i> +1234567890</p>
+                <p><i class="fas fa-envelope"></i> info@example.com</p>
+            </div>
+            <div class="social-links">
+                <h3>Síguenos</h3>
+                <a href="https://wa.me/1234567890" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+                <a href="mailto:info@example.com" target="_blank"><i class="far fa-envelope"></i> Correo Electrónico</a>
+            </div>
+        </div>
     </footer>
     
     <script src="script.js"></script>
