Cambios en aminacion de ofertas

--- a/index.html
+++ b/index.html
@@ -31,39 +31,39 @@
             <img src="./images/banner.jfif" alt="Banner de promoción">
         </section>
 
-        <section class="ofertas">
+        <section class="offerts">
             <h2>Ofertas de Paquetes Turísticos</h2>
-            <div class="oferta">
+            <div class="offert">
                 <img src="./images/turismoavent1.jpg" alt="Oferta 1">
                 <h3>Paquete Aventura</h3>
                 <p>Explora lugares increíbles con nuestra oferta de aventura.</p>
                 <a href="pagina-oferta-1.html">Ver más</a>
             </div>
-            <div class="oferta">
+            <div class="offert">
                 <img src="./images/relaxplay2.jpg" alt="Oferta 2">
                 <h3>Paquete Relax</h3>
                 <p>Relájate y rejuvenece en destinos paradisíacos.</p>
                 <a href="pagina-oferta-2.html">Ver más</a>
             </div>
-            <div class="oferta">
+            <div class="offert">
                 <img src="./images/avent2playa.jpg" alt="Oferta 3">
                 <h3>Paquete Aventura 2</h3>
                 <p>Descubre aventuras emocionantes en todo el mundo.</p>
                 <a href="pagina-oferta-3.html">Ver más</a>
             </div>
-            <div class="oferta">
+            <div class="offert">
                 <img src="./images/romantplaya.jpg" alt="Oferta 4">
                 <h3>Paquete Romántico</h3>
                 <p>Vive momentos inolvidables en destinos románticos.</p>
                 <a href="pagina-oferta-4.html">Ver más</a>
             </div>
-            <div class="oferta">
+            <div class="offert">
                 <img src="./images/playa.jpg" alt="Oferta 5">
                 <h3>Paquete Playa</h3>
                 <p>Relájate en las playas más hermosas del mundo.</p>
                 <a href="pagina-oferta-5.html">Ver más</a>
             </div>
-            <div class="oferta">
+            <div class="offert">
                 <img src="./images/pesca.jpg" alt="Oferta 6">
                 <h3>Paquete pesca</h3>
                 <p>Sumérgete en la cultura y la historia de diferentes lugares.</p>
