--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#"><img src="./images/icons/travelling_2060284.png" alt="Inicio"> Inicio</a></li>
                 <li><a href="#"><img src="./images/icons/map_1934285.png" alt="Tours"> Tours</a></li>
                 <li><a href="#"><img src="./images/icons/reception_1934306.png" alt="Contacto"> Contacto</a></li>
-                <li><a href="#"><img src="./images/icons/rating_1934299.png" alt="Registrarse"> Registrarse</a></li>
+                <li><a href="./pages/registro.html" target="_blank"><img src="./images/icons/rating_1934299.png" alt="Registrarse"> Registrarse</a></li>
                 <li><a href="#"><img src="./images/icons/luggage_1934282.png" alt="Iniciar sesión"> Iniciar sesión</a></li>
             </ul>
         </nav>
