--- a/pages/registro.html
+++ b/pages/registro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/registro.css">
-    <link rel="icon" type="image/png" sizes="16x16"  href="./favicons/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16"  href="../favicons/favicon-16x16.png">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
     <title>Nosotros - Agencia de Turismo</title>
@@ -16,10 +16,10 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#"><img src="../images/icons/travelling_2060284.png" alt="Inicio"> Inicio</a></li>
+                <li><a href="../index.html"><img src="../images/icons/travelling_2060284.png" alt="Inicio"> Inicio</a></li>
                 <li><a href="#"><img src="../images/icons/map_1934285.png" alt="Tours"> Tours</a></li>
                 <li><a href="#"><img src="../images/icons/reception_1934306.png" alt="Contacto"> Contacto</a></li>
-                <li><a href="../pages/registro.html" target="_blank"><img src="../images/icons/rating_1934299.png" alt="Registrarse"> Registrarse</a></li>
+                <li><a href="../pages/registro.html"><img src="../images/icons/rating_1934299.png" alt="Registrarse"> Registrarse</a></li>
                 <li><a href="#"><img src="../images/icons/luggage_1934282.png" alt="Iniciar sesión"> Iniciar sesión</a></li>
             </ul>
         </nav>
@@ -29,7 +29,7 @@
     <main>
         <div class="registration-container">
             <div class="registration-form">
-                <h2>Forma parte de Nosotros</h2>
+                <h2>Forma parte de Nosotros </h2>
                 <form>
                     <label for="nombre">Nombre:</label>
                     <input type="text" id="nombre" name="nombre" required>
