--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
+    <!DOCTYPE html>
+    <html lang="es">
+    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="icon" type="image/png" sizes="16x16"  href="./favicons/favicon-16x16.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
     <title>Nosotros - Agencia de Turismo</title>
@@ -12,7 +15,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="./images/WhatsApp Image 2023-09-01 at 16.59.21.jpeg" alt="Logo de Nosotros">
+            <img src="./images/logo5.png" alt="Logo de Nosotros">
         </div>
         <nav>
             <ul>
@@ -28,7 +31,7 @@
 
     <main>
         <section class="banner">
-            <img src="./images/banner.jfif" alt="Banner de promoción">
+            <img src="./images/boeing-159589_1280.png" alt="Banner de promoción">
         </section>
 
         <section class="offerts">
@@ -47,7 +50,7 @@
             </div>
             <div class="offert">
                 <img src="./images/avent2playa.jpg" alt="Oferta 3">
-                <h3>Paquete Aventura 2</h3>
+                <h3>Paquete Aventura Plus   </h3>
                 <p>Descubre aventuras emocionantes en todo el mundo.</p>
                 <a href="pagina-oferta-3.html">Ver más</a>
             </div>
