--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#"><img src="./images/icons/map_1934285.png" alt="Tours"> Tours</a></li>
                 <li><a href="#"><img src="./images/icons/reception_1934306.png" alt="Contacto"> Contacto</a></li>
                 <li><a href="./pages/registro.html"><img src="./images/icons/rating_1934299.png" alt="Registrarse"> Registrarse</a></li>
-                <li><a href="#"><img src="./images/icons/luggage_1934282.png" alt="Iniciar sesión"> Iniciar sesión</a></li>
+                <li><a href="./pages/login.html"><img src="./images/icons/luggage_1934282.png" alt="Iniciar sesión"> Iniciar sesión</a></li>
             </ul>
         </nav>
         
@@ -31,7 +31,7 @@
 
     <main>
         <section class="banner">
-            <img src="./images/boeing-159589_1280.png" alt="Banner de promoción">
+            <img src="./images/welcome-aboard-2334166_1280.jpg" alt="Banner de promoción">
         </section>
 
         <section class="offerts">
@@ -75,20 +75,37 @@
         </section>
     </main>
 
-    <footer class="modern-footer">
-        <div class="footer-content">
-            <div class="contact-info">
-                <h3>Contacto</h3>
-                <p><i class="fas fa-phone"></i> +1234567890</p>
-                <p><i class="fas fa-envelope"></i> info@example.com</p>
-            </div>
-            <div class="social-links">
-                <h3>Síguenos</h3>
-                <a href="https://wa.me/1234567890" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a>
-                <a href="mailto:info@example.com" target="_blank"><i class="far fa-envelope"></i> Correo Electrónico</a>
-            </div>
+    <footer>
+        <div class="foot">
+          <div>
+            <h3 class="title">¡Síguenos en las redes sociales!</h3>
+            <p>Descubre las mejores ofertas y destinos.</p>
+            <ul>
+              <li>
+                <a href="#"><img src="./images/icons/fac.png" alt="Facebook">  Facebook</a>
+              </li>
+              <li>
+                <a href="#"><img src="./images/icons/twit.png" alt="Twitter">  Twitter</a>
+              </li>
+              <li>
+                <a href="#"><img src="./images/icons/inst.png" alt="Intagram">  Instagram</a>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3 class="title">Contacto</h3>
+            <p>
+              <img src="./images/icons/phone.png" alt="Telefono"> Teléfono: 123-456-789
+            </p>
+            <p>
+              <img src="./images/icons/mail.png" alt="Mail"> Correo electrónico: info@tudominio.com
+            </p>
+          </div>
         </div>
-    </footer>
+        <div class="copy-right">
+          <p>&copy; 2023 Nosotros Turismo. Todos los derechos reservados.</p>
+        </div>
+      </footer>
     
     <script src="script.js"></script>
 </body>
