--- a/pages/login.html
+++ b/pages/login.html
@@ -26,7 +26,7 @@
         
     </header>
 
-    <main>
+    <main class="main">
         <div class="formulario">
             <h2>Iniciar Sesión</h2>
             <form action="/tu_ruta_de_procesamiento" method="post">
