--- a/pages/login.html
+++ b/pages/login.html
@@ -20,7 +20,7 @@
                 <li><a href="#"><img src="../images/icons/map_1934285.png" alt="Tours"> Tours</a></li>
                 <li><a href="#"><img src="../images/icons/reception_1934306.png" alt="Contacto"> Contacto</a></li>
                 <li><a href="../pages/registro.html"><img src="../images/icons/rating_1934299.png" alt="Registrarse"> Registrarse</a></li>
-                <li><a href="#"><img src="../images/icons/luggage_1934282.png" alt="Iniciar sesión"> Iniciar sesión</a></li>
+                <li><a href="./login.html"><img src="../images/icons/luggage_1934282.png" alt="Iniciar sesión"> Iniciar sesión</a></li>
             </ul>
         </nav>
         
@@ -29,7 +29,8 @@
     <main class="main">
         <div class="formulario">
             <h2>Iniciar Sesión</h2>
-            <form action="/tu_ruta_de_procesamiento" method="post">
+            <form id="loginForm" action="#" method="post"> <!-- Cambié el action a "#" para prevenir el envío real del formulario -->
+                <!-- Campos del formulario -->
                 <div class="campo">
                     <input type="text" name="usuario" placeholder="Usuario" required>
                 </div>
@@ -38,7 +39,7 @@
                 </div>
                 <button type="submit">Iniciar Sesión</button>
             </form>
-            <button id="closeButton">Cerrar </button>
+            <button id="closeButton">Cerrar</button>
         </div>
     </main> 
 
