--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <img src="./images/relaxplay2.jpg" alt="Oferta 2">
                 <h3>Paquete Relax</h3>
                 <p>Relájate y rejuvenece en destinos paradisíacos.</p>
-                <a href="pagina-oferta-2.html">Ver más</a>
+                <a href="./pages/relax.html">Ver más</a>
             </div>
             <div class="offert">
                 <img src="./images/avent2playa.jpg" alt="Oferta 3">
@@ -58,7 +58,7 @@
                 <img src="./images/romantplaya.jpg" alt="Oferta 4">
                 <h3>Paquete Romántico</h3>
                 <p>Vive momentos inolvidables en destinos románticos.</p>
-                <a href="pagina-oferta-4.html">Ver más</a>
+                <a href="./pages/romantic.html">Ver más</a>
             </div>
             <div class="offert">
                 <img src="./images/playa.jpg" alt="Oferta 5">
