--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <img src="./images/playa.jpg" alt="Oferta 5">
                 <h3>Paquete Playa</h3>
                 <p>Relájate en las playas más hermosas del mundo.</p>
-                <a href="pagina-oferta-5.html">Ver más</a>
+                <a href="./pages/playa.html">Ver más</a>
             </div>
             <div class="offert">
                 <img src="./images/pesca.jpg" alt="Oferta 6">
