--- a/index.html
+++ b/index.html
@@ -1,112 +1,112 @@
-    <!DOCTYPE html>
-    <html lang="es">
-    <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/styles.css">
-    <link rel="icon" type="image/png" sizes="16x16"  href="./favicons/favicon-16x16.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="theme-color" content="#ffffff">
-    <title>Nosotros - Agencia de Turismo</title>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="./styles/styles.css">
+<link rel="icon" type="image/png" sizes="16x16"  href="./favicons/favicon-16x16.png">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="theme-color" content="#ffffff">
+<title>Nosotros - Agencia de Turismo</title>
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img src="./images/logo5.png" alt="Logo de Nosotros">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="./index.html"><img src="./images/icons/travelling_2060284.png" alt="Inicio"> Inicio</a></li>
-                <li><a href="#"><img src="./images/icons/map_1934285.png" alt="Tours"> Tours</a></li>
-                <li><a href="./pages/contacto.html"><img src="./images/icons/reception_1934306.png" alt="Contacto"> Contacto</a></li>
-                <li><a href="./pages/registro.html"><img src="./images/icons/rating_1934299.png" alt="Registrarse"> Registrarse</a></li>
-                <li><a href="./pages/login.html       "><img src="./images/icons/luggage_1934282.png" alt="Iniciar sesión"> Iniciar sesión</a></li>
-            </ul>
-        </nav>
-        
-    </header>
-
-    <main>
-        <section class="banner">
-            <img src="./images/welcome-aboard-2334166_1280.jpg" alt="Banner de promoción">
-        </section>
-
-        <section class="offerts">
-            <h2>Ofertas de Paquetes Turísticos</h2>
-            <div class="offert">
-                <img src="./images/turismoavent1.jpg" alt="Oferta 1">
-                <h3>Paquete Aventura</h3>
-                <p>Explora lugares increíbles con nuestra oferta de aventura.</p>
-                <a href="pagina-oferta-1.html">Ver más</a>
-            </div>
-            <div class="offert">
-                <img src="./images/relaxplay2.jpg" alt="Oferta 2">
-                <h3>Paquete Relax</h3>
-                <p>Relájate y rejuvenece en destinos paradisíacos.</p>
-                <a href="./pages/relax.html">Ver más</a>
-            </div>
-            <div class="offert">
-                <img src="./images/avent2playa.jpg" alt="Oferta 3">
-                <h3>Paquete Aventura Plus   </h3>
-                <p>Descubre aventuras emocionantes en todo el mundo.</p>
-                <a href="pagina-oferta-3.html">Ver más</a>
-            </div>
-            <div class="offert">
-                <img src="./images/romantplaya.jpg" alt="Oferta 4">
-                <h3>Paquete Romántico</h3>
-                <p>Vive momentos inolvidables en destinos románticos.</p>
-                <a href="./pages/romantic.html">Ver más</a>
-            </div>
-            <div class="offert">
-                <img src="./images/playa.jpg" alt="Oferta 5">
-                <h3>Paquete Playa</h3>
-                <p>Relájate en las playas más hermosas del mundo.</p>
-                <a href="pagina-oferta-5.html">Ver más</a>
-            </div>
-            <div class="offert">
-                <img src="./images/pesca.jpg" alt="Oferta 6">
-                <h3>Paquete pesca</h3>
-                <p>Sumérgete en la cultura y la historia de diferentes lugares.</p>
-                <a href="pagina-oferta-6.html">Ver más</a>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <div class="foot">
-          <div>
-            <h3 class="title">¡Síguenos en las redes sociales!</h3>
-            <p>Descubre las mejores ofertas y destinos.</p>
-            <ul>
-              <li>
-                <a href="#"><img src="./images/icons/fac.png" alt="Facebook">  Facebook</a>
-              </li>
-              <li>
-                <a href="#"><img src="./images/icons/twit.png" alt="Twitter">  Twitter</a>
-              </li>
-              <li>
-                <a href="#"><img src="./images/icons/inst.png" alt="Intagram">  Instagram</a>
-              </li>
-            </ul>
-          </div>
-          <div>
-            <h3 class="title">Contacto</h3>
-            <p>
-              <img src="./images/icons/phone.png" alt="Telefono"> Teléfono: 123-456-789
-            </p>
-            <p>
-              <img src="./images/icons/mail.png" alt="Mail"> Correo electrónico: info@tudominio.com
-            </p>
-          </div>
-        </div>
-        <div class="copy-right">
-          <p>&copy; 2023 Nosotros Turismo. Todos los derechos reservados.</p>
-        </div>
-      </footer>
+<header>
+    <div class="logo">
+        <img src="./images/logo5.png" alt="Logo de Nosotros">
+    </div>
+    <nav>
+        <ul>
+            <li><a href="./index.html"><img src="./images/icons/travelling_2060284.png" alt="Inicio"> Inicio</a></li>
+            <li><a href="#"><img src="./images/icons/map_1934285.png" alt="Tours"> Tours</a></li>
+            <li><a href="./pages/contacto.html"><img src="./images/icons/reception_1934306.png" alt="Contacto"> Contacto</a></li>
+            <li><a href="./pages/registro.html"><img src="./images/icons/rating_1934299.png" alt="Registrarse"> Registrarse</a></li>
+            <li><a href="./pages/login.html       "><img src="./images/icons/luggage_1934282.png" alt="Iniciar sesión"> Iniciar sesión</a></li>
+        </ul>
+    </nav>
     
-    <script src="script.js"></script>
+</header>
+
+<main>
+    <section class="banner">
+        <img src="./images/welcome-aboard-2334166_1280.jpg" alt="Banner de promoción">
+    </section>
+
+    <section class="offerts">
+        <h2>Ofertas de Paquetes Turísticos</h2>
+        <div class="offert">
+            <img src="./images/turismoavent1.jpg" alt="Oferta 1">
+            <h3>Paquete Aventura</h3>
+            <p>Explora lugares increíbles con nuestra oferta de aventura.</p>
+            <a href="pagina-oferta-1.html">Ver más</a>
+        </div>
+        <div class="offert">
+            <img src="./images/relaxplay2.jpg" alt="Oferta 2">
+            <h3>Paquete Relax</h3>
+            <p>Relájate y rejuvenece en destinos paradisíacos.</p>
+            <a href="./pages/relax.html">Ver más</a>
+        </div>
+        <div class="offert">
+            <img src="./images/avent2playa.jpg" alt="AventuraPlus">
+            <h3>Paquete Aventura Plus   </h3>
+            <p>Descubre aventuras emocionantes en todo el mundo.</p>
+            <a href="./pages/AventuraPlus.html">Ver más</a>
+        </div>
+        <div class="offert">
+            <img src="./images/romantplaya.jpg" alt="Oferta 4">
+            <h3>Paquete Romántico</h3>
+            <p>Vive momentos inolvidables en destinos románticos.</p>
+            <a href="./pages/romantic.html">Ver más</a>
+        </div>
+        <div class="offert">
+            <img src="./images/playa.jpg" alt="Oferta 5">
+            <h3>Paquete Playa</h3>
+            <p>Relájate en las playas más hermosas del mundo.</p>
+            <a href="pagina-oferta-5.html">Ver más</a>
+        </div>
+        <div class="offert">
+            <img src="./images/pesca.jpg" alt="Pesca">
+            <h3>Paquete pesca</h3>
+            <p>Sumérgete en la cultura y la historia de diferentes lugares.</p>
+            <a href="./pages/Pesca.html">Ver más</a>
+        </div>
+    </section>
+</main>
+
+<footer>
+    <div class="foot">
+      <div>
+        <h3 class="title">¡Síguenos en las redes sociales!</h3>
+        <p>Descubre las mejores ofertas y destinos.</p>
+        <ul>
+          <li>
+            <a href="#"><img src="./images/icons/fac.png" alt="Facebook">  Facebook</a>
+          </li>
+          <li>
+            <a href="#"><img src="./images/icons/twit.png" alt="Twitter">  Twitter</a>
+          </li>
+          <li>
+            <a href="#"><img src="./images/icons/inst.png" alt="Intagram">  Instagram</a>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <h3 class="title">Contacto</h3>
+        <p>
+          <img src="./images/icons/phone.png" alt="Telefono"> Teléfono: 123-456-789
+        </p>
+        <p>
+          <img src="./images/icons/mail.png" alt="Mail"> Correo electrónico: info@tudominio.com
+        </p>
+      </div>
+    </div>
+    <div class="copy-right">
+      <p>&copy; 2023 Nosotros Turismo. Todos los derechos reservados.</p>
+    </div>
+  </footer>
+
+<script src="script.js"></script>
 </body>
 </html>
