--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/registro.css">
+    <link rel="stylesheet" href="./styles/login.css">
+    <link rel="stylesheet" href="./styles/contacto.css">
     <link rel="icon" type="image/png" sizes="16x16"  href="./favicons/favicon-16x16.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,9 +33,9 @@
     </header>
 
     <main>
-        <section class="banner">
+        <!-- <section class="banner">
             <img src="./images/welcome-aboard-2334166_1280.jpg" alt="Banner de promoción">
-        </section>
+        </section> -->
 
         <section class="offerts">
             <h2>Ofertas de Paquetes Turísticos</h2>
