--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <img src="./images/turismoavent1.jpg" alt="Oferta 1">
                 <h3>Paquete Aventura</h3>
                 <p>Explora lugares increíbles con nuestra oferta de aventura.</p>
-                <a href="pagina-oferta-1.html">Ver más</a>
+                <a href="./pages/aventura.html">Ver más</a>
             </div>
             <div class="offert">
                 <img src="./images/relaxplay2.jpg" alt="Oferta 2">
