arreglo imagens y responsive

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section class="offerts">
         <h2>Ofertas de Paquetes Turísticos</h2>
         <div class="offert">
-            <img src="./images/turismoavent1.jpg" alt="Oferta 1">
+            <img src="./images/adventure2.jpg" alt="Oferta 1">
             <h3>Paquete Aventura</h3>
             <p>Explora lugares increíbles con nuestra oferta de aventura.</p>
             <a href="./pages/aventura.html">Ver más</a>
