--- a/pages/AventuraPlus.html
+++ b/pages/AventuraPlus.html
@@ -37,12 +37,7 @@
     <div style="margin: 20px;">
     <h1>Tour Aventura Plus</h1>
     <h2>Las mejores localizaciones para la aventura de tu vida</h2>
-
     <br>
-    <h4>De que hablamos cuando hablamos de Aventuras:</h4>
-    <p>
-        Hablamos de pasar unas vacaciones diferentes, de llegar a lugares donde no todo el mundo puede llegar, que presentan un desafío. Desde escalar espectaculares montañas, bajar en rappel por los mejores y más pintorescos xelotes Mejicanos, nadar entre los magnificos y coloridos arrecifes de coral del Caribe, hasta espectaculares safaris por la sabana africana, rodeados de los magníficos animales que la habitan. En pocas palabras, tener una experiencia unica que jamás vas a borrar de tu memoria y podrás compartir para siempre.
-    </p>
     </div>
 
     <div align="center">
@@ -56,22 +51,22 @@
                 Ida y vuelta al hotel a todas horas<br>
                 Eventos en el Xenote: Casamientos, ritos Mayas, etc.<br>
                 Alojamiento en hoteles en Cancún<br>
-                Descensos en rappel asistidos se contratan aparte.</p>
+                Descensos en rappel asistidos son aparte.</p>
                 <br> <p>Duración: 5 días - 4 noches.</p>
                 <a href="./formulario.html">Solicitar Presupuesto</a>
     </div>
 
     <div class="offert">
         <img src="../images/tortuga.jpg" alt="Tortuga" />
-        <h3>Buceo entre los arrecifes de Coral</h3>
+        <h3>Buceo en arrecifes de Coral</h3>
         <p>«Tortugas» es el más popular arrecife de coral y uno de los más famosos del Caribe. Es un sitio único donde se pueden avistar en una misma inmersión tres de las tortugas más comunes del mar Caribe, las tortugas carey, las tortugas verdes y las enormes tortugas bobas. Todas disfrutan juntas este hábitat perfecto.</p>
             <br>
             <p>Actividades Incluídas:<br><br>
             Salidas en barco todas las mañanas con guías especializados<br>
             Alojamiento en cabañas u hotel sobre la playa</li><br>
             Eventos en las noches sobre la playa<br>
-            Tour de compras en los pintorescos pueblos cercanos<br>
-            Recorridos por las más hermosas playas.<br></p>
+            Tour de compras en los pintorescos pueblos<br>
+            Recorridos por las más hermosas playas exclusivas.<br></p>
             <br> <p>Duración: 5 días - 4 noches.</p>
             <a href="./formulario.html">Solicitar Presupuesto</a>
     </div>
@@ -80,7 +75,7 @@
     <div class="offert">
         <img src="../images/Safari.jpg" alt="Safari" />
         <h3>Safari Fotográfico en Africa</h3>
-        <p>Si me preguntas cuál es el mejor país de África para ir de safari por primera vez, mi respuesta es Kenia o Tanzania, sin dudarlo. Son destinos que llevan muchos años recibiendo viajeros y están especializados en safaris organizados; por lo que son ideales para iniciarte en el mundo de los safaris fotográficos.</p>
+        <p>Si me preguntas cuál es el mejor país de África para ir de safari por primera vez, mi respuesta es Kenia o Tanzania, sin dudarlo, ricos en fauna y flora característica. Son destinos que llevan muchos años recibiendo viajeros y están especializados en safaris organizados; por lo que son ideales para iniciarte en el mundo de los safaris fotográficos.</p>
             <br><p>Actividades Incluídas:</p>
             <br><p>Presenciar la famosa migración de los ñus cruzando el río Mara.<br>
             Montar en globo al amanecer en Masai Mara para disfrutar de un safari diferente.<br>
@@ -94,12 +89,12 @@
 
     <div class="offert">
         <img src="../images/escalada.jpg" alt="Escalada" />
-        <h3>EScalada Monte Kinabalu, Malasia</h3>
-        <p>El Monte Kinabalu y el Parque Kinabalu son Patrimonio de la Humanidad por la UNESCO y área protegida. Kinabalu es el pico más alto de la isla de Borneo, con 4095 metros. Es una montaña particularmente importante debido a su diversidad biológica: ¡tiene más especies de plantas que toda América del Norte y Europa combinadas! La escalada no requiere ningún equipo o habilidad en particular, solo buena condición física. Es una escalada de dos días que atraviesa muchas zonas climáticas, en sentido ascendente se encuentran los bosques lluviosos tropicales de planicie y colina, los tropicales de montaña y, a mayor altura, subalpinos con matorral de hoja perenne.</p>
+        <h3>Escalada Monte Kinabalu, Malasia</h3>
+        <p>El Monte Kinabalu es el pico más alto de la isla de Borneo, con 4095 metros. Es una montaña particularmente importante debido a su diversidad biológica. La escalada no requiere ningún equipo o habilidad en particular, solo buena condición física. Es una escalada de dos días que atraviesa muchas zonas climáticas, en sentido ascendente se encuentran los bosques lluviosos tropicales de planicie y colina, los tropicales de montaña y, a mayor altura, subalpinos con matorral de hoja perenne.</p>
             <br><p>Actividades Incluídas:</p>
-            <br><p>Salidas todas las mañanas con guías especializados<br>
+            <br><p>Salidas en las mañanas con guías especializados<br>
             Alojamiento en hoteles de primera categoría.<br>
-            Equipo necesario de acampada, seguridad y escalada incluídos.<br>
+            Equipo de acampada, seguridad y escalada incluídos.<br>
             Excursiones para ver flora y fauna local con guias expertos.<br>
             Transporte desde y hacia el hotel.<br>
             <br> <p>Duración: 7 días - 6 noches.</p>
