--- a/pages/Pesca.html
+++ b/pages/Pesca.html
@@ -55,11 +55,10 @@
                     Especial tanto para pescadores 
                     expertos como para principiantes, con la posibilidad de pescar entre los 
                     numerosos arrecifes de coral y restos.<p>
-                    <br> 
-                    <p>Actividades Incluídas<br>
-                        Barcos con pescadores expertos y el equipamiento necesario<br>
+                    <br><p>Actividades Incluídas</p>
+                    <br><p>Barcos con pescadores expertos y el equipamiento necesario<br>
                         Salidas todas las mañanas, duración: 4/8hs<br>
-                        Pesca en arrecifes de coral y restos de naufragios<br>
+                        Pesca en arrecifes de coral<br>
                         Alojamiento en hoteles sobre la playa<br>
                         Excursiones de pesca durante la noche.</p>
                         <br> <p>Duración: 5 días - 4 noches.</p>
@@ -72,10 +71,10 @@
                 <p>Disfrute de un día de pesca en alta mar en la Bahía de Samaná, este chárter de pesca de la 
                     Bahía de Samaná es ideal para todos los niveles de experiencia y te ofrece una buena oportunidad 
                     de pescar dentro y cerca de la bahía sin alejarte de la costa.</p>
-                    <br>
-                    <p>Actividades Incluídas<br>
-                    Barcos pesqueros con pescadores expertos y el equipamiento necesario<br>
-                    Salidas todas las mañanas, duración 6/8hs</li><br>
+                   
+                    <br><p>Actividades Incluídas</p>
+                    <br><p>Barcos pesqueros con pescadores expertos y el equipamiento necesario<br>
+                    Salidas todas las mañanas, duración 6/8hs<br>
                     Salidas de pesca nocturnas (solo a solicitud del contratante), Duración: 4hs<br>
                     Alojamiento en la zona de pesca<br>
                     Eventos durante las noches.<br></p>
