--- a/pages/AventuraPlus.html
+++ b/pages/AventuraPlus.html
@@ -37,6 +37,7 @@
     <div style="margin: 20px;">
     <h1>Tour Aventura Plus</h1>
     <h2>Las mejores localizaciones para la aventura de tu vida</h2>
+    
     <br>
     </div>
 
@@ -90,7 +91,7 @@
     <div class="offert">
         <img src="../images/escalada.jpg" alt="Escalada" />
         <h3>Escalada Monte Kinabalu, Malasia</h3>
-        <p>El Monte Kinabalu es el pico más alto de la isla de Borneo, con 4095 metros. Es una montaña particularmente importante debido a su diversidad biológica. La escalada no requiere ningún equipo o habilidad en particular, solo buena condición física. Es una escalada de dos días que atraviesa muchas zonas climáticas, en sentido ascendente se encuentran los bosques lluviosos tropicales de planicie y colina, los tropicales de montaña y, a mayor altura, subalpinos con matorral de hoja perenne.</p>
+        <p>El Monte Kinabalu es el pico más alto de la isla de Borneo, con 4095 metros (son declarados por la UNESCO, Patrimonio de la Humanidad y área protegida). Es una montaña particularmente importante debido a su diversidad biológica: ¡tiene más especies de plantas que toda América del Norte y Europa combinadas! . La escalada no requiere ningún equipo o habilidad en particular, solo buena condición física. Es una escalada de dos días que atraviesa muchas zonas climáticas, en sentido ascendente se encuentran los bosques lluviosos tropicales de planicie y colina, los tropicales de montaña y, a mayor altura, subalpinos con matorral de hoja perenne.</p>
             <br><p>Actividades Incluídas:</p>
             <br><p>Salidas en las mañanas con guías especializados<br>
             Alojamiento en hoteles de primera categoría.<br>
