--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <main>
     <section class="banner">
-        <img src="./images/welcome-aboard-2334166_1280.jpg" alt="Banner de promoción">
+        <img src="./images/welcome.jpg" alt="Banner de promoción">
     </section>
 
     <section class="offerts">
