--- a/pages/relax.html
+++ b/pages/relax.html
@@ -27,7 +27,7 @@
     </header>
     <main>
         <section class="offerts">
-            <h2>Paquete Relax </h2>
+            <h2>Tours Relax </h2>
             <div class="offert">
               <img src="../images/maldivas.jpg" alt="Oferta Islas Maldivas">
               <h3>Islas Maldivas</h3>
