--- a/pages/romantic.html
+++ b/pages/romantic.html
@@ -28,7 +28,7 @@
     <main>
    
         <section class="offerts">
-            <h2>Paquete Romántico </h2>
+            <h2>Tours Románticos </h2>
            
             <div class="offert">
               <img src="../images/torre.jpg" alt="Francia">
