--- a/pages/playa.html
+++ b/pages/playa.html
@@ -27,7 +27,7 @@
     </header>
  <main>
   <section class="offerts">
-    <h2 class="roboto-font">Paquete Playa</h2>
+    <h2 class="roboto-font">Tour Playa</h2>
 
     <div class="offert">
         <img src="../images/playa-colombia.jpg" alt="Playa en San Andrés, Colombia">
@@ -45,7 +45,7 @@
         </ul>
 
         <p>Tu experiencia en San Andrés será una aventura llena de actividades acuáticas y momentos relajantes en un paraíso tropical.</p>
-        <a href="fpresupuesto.html">Solicitar Presupuesto</a>
+        <a href="formulario.html">Solicitar Presupuesto</a>
     </div>
 
     <div class="offert">
@@ -64,8 +64,7 @@
         </ul>
 
         <p>Tu aventura en Cancún será una mezcla perfecta de actividades acuáticas, cultura y entretenimiento.</p>
-        <a href="fpresupuesto.html">Solicitar Presupuesto</a>
-    </div>
+        <a href="formulario.html">Solicitar Presupuesto</a>
 
     <div class="offert">
         <img src="../images/playa-portugal.jpg" alt="Praia da Marinha, Algarve, Portugal">
@@ -83,7 +82,7 @@
         </ul>
 
         <p>Tu experiencia en Praia da Marinha será una mezcla de aventura y relajación en uno de los destinos más hermosos de Portugal.</p>
-        <a href="fpresupuesto.html">Solicitar Presupuesto</a>
+        <a href="formulario.html">Solicitar Presupuesto</a>
     </div>
 
     <div class="offert">
@@ -102,7 +101,7 @@
         </ul>
 
         <p>Tu viaje será una aventura natural inolvidable y una oportunidad para conectarte con la biodiversidad única de este paraíso.</p>
-        <a href="fpresupuesto.html">Solicitar Presupuesto</a>
+        <a href="formulario.html">Solicitar Presupuesto</a>
     </div>
 </section>
  </main>
