--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="offert">
             <img src="./images/pesca.jpg" alt="Pesca">
             <h3>Tours Pesca de Altura</h3>
-            <p>Sumérgete en la rica cultura e historia de diversos lugares, explorando fascinantes tradiciones</p>
+            <p>Sumérgete en la rica cultura de diversos lugares, explorando fascinantes tradiciones.</p>
             <a href="./pages/Pesca.html">Ver más</a>
         </div>
     </section>
