--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -100,6 +100,6 @@
         </div>
       </footer> 
     
-    <script src="script.js"></script>
+    <script src="../scripts/script.js"></script>
 </body>
 </html>
