agregado de header y script en casi todas

--- a/pages/AventuraPlus.html
+++ b/pages/AventuraPlus.html
@@ -106,38 +106,38 @@
 </main>
 
 <footer>
-    <div class="foot">
-      <div>
-        <h3 class="title">¡Síguenos en las redes sociales!</h3>
-        <p>Descubre las mejores ofertas y destinos.</p>
-        <ul>
-          <li>
-            <a href="#"><img src="../images/icons/fac.png" alt="Facebook">  Facebook</a>
-          </li>
-          <li>
-            <a href="#"><img src="../images/icons/twit.png" alt="Twitter">  Twitter</a>
-          </li>
-          <li>
-            <a href="#"><img src="../images/icons/inst.png" alt="Intagram">  Instagram</a>
-          </li>
-        </ul>
-      </div>
-      <div>
-        <h3 class="title">Contacto</h3>
-        <p>
-          <img src="../images/icons/phone.png" alt="Telefono"> Teléfono: 123-456-789
-        </p>
-        <p>
-          <img src="../images/icons/mail.png" alt="Mail"> Correo electrónico: info@tudominio.com
-        </p>
-      </div>
+  <div class="foot">
+    <div>
+      <h3 class="title">¡Síguenos en las redes sociales!</h3>
+      <p>Descubre las mejores ofertas y destinos.</p>
+      <ul>
+        <li>
+          <a href="#"><img src="./images/icons/fac.png" alt="Facebook">  Facebook</a>
+        </li>
+        <li>
+          <a href="#"><img src="./images/icons/twit.png" alt="Twitter">  Twitter</a>
+        </li>
+        <li>
+          <a href="#"><img src="./images/icons/inst.png" alt="Intagram">  Instagram</a>
+        </li>
+      </ul>
     </div>
-    <div class="copy-right">
-      <p>&copy; 2023 Nosotros Turismo. Todos los derechos reservados.</p>
+    <div>
+      <h3 class="title">Contacto</h3>
+      <p>
+        <img src="./images/icons/phone.png" alt="Telefono"> Teléfono: 123-456-789
+      </p>
+      <p>
+        <img src="./images/icons/mail.png" alt="Mail"> Correo electrónico: info@tudominio.com
+      </p>
     </div>
-  </footer>
+  </div>
+  <div class="copy-right">
+    <p>&copy; 2023 Nosotros Turismo. Todos los derechos reservados.</p>
+  </div>
+</footer>
 
-    <script src="../NosTurismo/pages/index.js"></script>
+<script src="../scripts/script.js"></script>
 </body>
 </html>
     
