Animacion y simulao de loguin

--- a/pages/login.html
+++ b/pages/login.html
@@ -59,6 +59,17 @@
             </form>
             <button id="closeButton">Cerrar</button>
         </div>
+
+        <div id="loading" class="loading">
+          <div class="loader"></div>
+      </div>
+      
+      <div id="myModal" class="modal">
+          <div class="modal-content">
+              <span class="close">&times;</span>
+              <p id="welcomeMessage"></p>
+          </div>
+      </div>
     </main> 
 
     <footer>
