--- a/pages/registro.html
+++ b/pages/registro.html
@@ -17,7 +17,7 @@
     <nav>
         <ul>
             <li><a href="../index.html"><img src="../images/icons/travelling_2060284.png" alt="Inicio"> Inicio</a></li>
-            <li><a href="./cotizacionDolar.html"><img src="../images/icons/map_1934285.png" alt="Tours"> Tours</a></li>
+            <li><a href="./cotizacionDolar.html"><img src="../images/icons/map_1934285.png" alt="Tours"> Clima</a></li>
             <li><a href="./contacto.html"><img src="../images/icons/reception_1934306.png" alt="Contacto"> Contacto</a></li>
             <li><a href="./registro.html"><img src="../images/icons/rating_1934299.png" alt="Registrarse"> Registrarse</a></li>
             <li><a href="./login.html       "><img src="../images/icons/luggage_1934282.png" alt="Iniciar sesión"> Iniciar sesión</a></li>
