--- a/pages/playa.html
+++ b/pages/playa.html
@@ -113,7 +113,7 @@
                 <h3>Islas Galápagos</h3>
                 <p>Disfruta de unas vacaciones inolvidables en las fascinantes Islas Galápagos, un paraíso natural único en el mundo. Explora playas de arena blanca y aguas cristalinas durante 7 días y 6 noches.</p>
 
-                <p>Algunas de las experiencias destacadas de este paquete incluyen:</p>
+                <p>Algunas de las experiencias destacadas incluyen:</p>
                 
                 <ul>
                     <li>Exploración Submarina: Embárcate en emocionantes aventuras de buceo y snorkel.<br></li>
