--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 
 <main>
     <section class="banner">
-        <img src="./images/welcome.jpg" alt="Banner de promoción">
+        <img src="./images/nostur.png" alt="Banner de promoción">
     </section>
 
     <section class="offerts">
-        <h2>Ofertas de Paquetes Turísticos</h2>
+      
         <div class="offert">
-            <img src="./images/turismoavent1.jpg" alt="Oferta 1">
+            <img src="./images/adventure2.jpg" alt="Oferta 1">
             <h3>Tours Aventura</h3>
             <p>Descubre la emoción en destinos épicos de todo el mundo con nuestra irresistible oferta de aventura. </p>
             <a href="./pages/aventura.html">Ver más</a>
