--- a/pages/Pesca.html
+++ b/pages/Pesca.html
@@ -54,7 +54,7 @@
       
         <div style="margin: 20px;">
             <h1>Tour de Pesca de Altura</h1>
-            <h2>Las mejores localizaciones del Mundo</h2>
+            <h2>Las Mejores Localizaciones del Mundo</h2>
         </div>
         
             <div align="center">
