arreglo de imagenes

--- a/pages/aventura.html
+++ b/pages/aventura.html
@@ -89,12 +89,12 @@
             <div class="offert">
                 <img src="../images/crucero.jpg" alt="Crucero Fluvial por el Danubio en Austria">
                 <h3>Crucero Fluvial por el Danubio en Austria</h3>
-                <p>Relájate en un crucero fluvial por el majestuoso río Danubio en Austria. Disfruta de paisajes pintorescos, ciudades encantadoras y una experiencia tranquila en el agua.</p>
+                <p>Relájate en un crucero fluvial por el majestuoso río Danubio en Austria. Ciudades encantadoras y una experiencia tranquila en el agua.</p>
                 <p>Duración: 5 días, 4 noches</p>
                 
                     <p>Actividades incluidas:</p>
                     <ul>
-                        <li>Crucero fluvial por el Danubio con paradas en ciudades históricas.</li><br>
+                        <li>Crucero fluvial por el Danubio.</li><br>
                         <li>Excursiones a castillos y lugares de interés.</li><br>
                         <li>Cenas gourmet a bordo con música en vivo.</li><br>
                         <li>Conferencias sobre historia y arte austriacos.</li><br>
