se arreglo del cuadros y el titulo

--- a/pages/aventura.html
+++ b/pages/aventura.html
@@ -28,7 +28,7 @@
     </header>
     <main>
         <section class="offerts">
-            <h2 > Tours de Aventura Familiar</h2>        
+            <h2 > Tours de Aventura </h2>        
             <div class="offert">
                 <img src="../images/montana-suiza.jpg" alt="Caminatas en las Montañas de Suiza">
                 <h3>Caminatas en las Montañas de Suiza</h3>
