--- a/pages/aventura.html
+++ b/pages/aventura.html
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li><a href="../index.html"><img src="../images/icons/travelling_2060284.png" alt="Inicio"> Inicio</a></li>
-                <li><a href="#"><img src="../images/icons/map_1934285.png" alt="Tours"> Tours</a></li>
+                <li><a href="../pages/cotizacionDolar.html"><img src="../images/icons/map_1934285.png" alt="Clima"> Clima</a></li>
                 <li><a href="../contacto.html"><img src="../images/icons/reception_1934306.png" alt="Contacto"> Contacto</a></li>
                 <li><a href="../pages/registro.html"><img src="../images/icons/rating_1934299.png" alt="Registrarse"> Registrarse</a></li>
                 <li><a href="../login.html"><img src="../images/icons/luggage_1934282.png" alt="Iniciar sesión"> Iniciar sesión</a></li>
@@ -113,23 +113,23 @@
       <p>Descubre las mejores ofertas y destinos.</p>
       <ul>
         <li>
-          <a href="#"><img src="./images/icons/fac.png" alt="Facebook">  Facebook</a>
+          <a href="#"><img src="../images/icons/fac.png" alt="Facebook">  Facebook</a>
         </li>
         <li>
-          <a href="#"><img src="./images/icons/twit.png" alt="Twitter">  Twitter</a>
+          <a href="#"><img src="../images/icons/twit.png" alt="Twitter">  Twitter</a>
         </li>
         <li>
-          <a href="#"><img src="./images/icons/inst.png" alt="Intagram">  Instagram</a>
+          <a href="#"><img src="../images/icons/inst.png" alt="Intagram">  Instagram</a>
         </li>
       </ul>
     </div>
     <div>
       <h3 class="title">Contacto</h3>
       <p>
-        <img src="./images/icons/phone.png" alt="Telefono"> Teléfono: 123-456-789
+        <img src="../images/icons/phone.png" alt="Telefono"> Teléfono: 123-456-789
       </p>
       <p>
-        <img src="./images/icons/mail.png" alt="Mail"> Correo electrónico: nosotrosMunTurismo@gmail.com
+        <img src="../images/icons/mail.png" alt="Mail"> Correo electrónico: nosotrosMunTurismo@gmail.com
       </p>
     </div>
   </div>
