--- a/pages/AventuraPlus.html
+++ b/pages/AventuraPlus.html
@@ -112,23 +112,23 @@
       <p>Descubre las mejores ofertas y destinos.</p>
       <ul>
         <li>
-          <a href="#"><img src="./images/icons/fac.png" alt="Facebook">  Facebook</a>
+          <a href="#"><img src="../images/icons/fac.png" alt="Facebook">  Facebook</a>
         </li>
         <li>
-          <a href="#"><img src="./images/icons/twit.png" alt="Twitter">  Twitter</a>
+          <a href="#"><img src="../images/icons/twit.png" alt="Twitter">  Twitter</a>
         </li>
         <li>
-          <a href="#"><img src="./images/icons/inst.png" alt="Intagram">  Instagram</a>
+          <a href="#"><img src="../images/icons/inst.png" alt="Intagram">  Instagram</a>
         </li>
       </ul>
     </div>
     <div>
       <h3 class="title">Contacto</h3>
       <p>
-        <img src="./images/icons/phone.png" alt="Telefono"> Teléfono: 123-456-789
+        <img src="../images/icons/phone.png" alt="Telefono"> Teléfono: 123-456-789
       </p>
       <p>
-        <img src="./images/icons/mail.png" alt="Mail"> Correo electrónico: nosotrosMunTurismo@gmail.com
+        <img src="../images/icons/mail.png" alt="Mail"> Correo electrónico: nosotrosMunTurismo@gmail.com
       </p>
     </div>
   </div>
