--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
 
 <main>
-    <section class="banner">
-        <img src="./images/nostur.png" alt="Banner de promoción">
-    </section>
+    <h1 class="banner">
+        Viaja con nosotros y aprovecha nuestras ofertas, unite y se viajero VIP
+    <h1>
 
     <section class="offerts">
       
